--- a/src/app/manage-entities/manage-entities.component.html
+++ b/src/app/manage-entities/manage-entities.component.html
@@ -21,60 +21,165 @@
 
   <!-- ======================================================================== -->
   
-    <mat-tab label="Colleges">
-      <app-tab-template>
-        <div side-title>
-          Colleges
-        </div>
-        <div side-content>
-          &lt;to be filled&gt;
-        </div>
-        <div main-title>
-          Results
-        </div>
-        <div main-content>
-          &lt;to be filled&gt;
-        </div>
-      </app-tab-template>
-    </mat-tab>
+  <mat-tab label="Colleges" value="Colleges">
+    <app-tab-template>
+      <div side-title>
+        Colleges
+      </div>
+      <div side-content>
+        <div>&lt;search bar?&gt;</div>
+        <button mat-button (click)="showNewUserPopup=true" class="gray-button">New</button>
+      </div>
+      <div main-title>
+        Results
+      </div>
+      <div main-content>
+        <table mat-table [dataSource]="collegeData" *ngIf="usersTableReady" class="mat-elevation-z1">
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> # </th>
+           <!-- <td mat-cell *matCellDef="let element"> {{element.id}} </td>  -->
+           <td mat-cell *matCellDef="let element; let i = index">{{i + 1}}</td>
+          </ng-container>
+        
+          <ng-container matColumnDef="college_code">
+            <th mat-header-cell *matHeaderCellDef> COLLEGE CODE </th>
+            <td mat-cell *matCellDef="let element"> {{element.college_code}}</td> 
+            
+          </ng-container>
+        
+          <ng-container matColumnDef="college_name">
+            <th mat-header-cell *matHeaderCellDef> NAME </th>
+            <td mat-cell *matCellDef="let element"> {{element.college_name}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="active">
+            <th mat-header-cell *matHeaderCellDef> ACTIVE </th>
+            <td mat-cell *matCellDef="let element"> {{element.is_active}} </td>
+          </ng-container>
+        
+          <tr mat-header-row *matHeaderRowDef="collegeRowDef"></tr>
+          <tr mat-row *matRowDef="let row; columns: collegeRowDef" (click)="rowClicked(row)" [matMenuTriggerFor]="menu"></tr>
+          
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="showEditUserPopup=true">Edit</button>
+            <button mat-menu-item (click)="deleteUserProcess()">Delete</button>
+          </mat-menu>
+        </table>
+        
+        
+      </div>
+    </app-tab-template>
+  </mat-tab>
+
+  
+  
+  <!-- ======================================================================== -->
+  
+  <mat-tab label="Course" value="Courses">
+    <app-tab-template>
+      <div side-title>
+        Courses
+      </div>
+      <div side-content>
+        <div>&lt;search bar?&gt;</div>
+        <button mat-button (click)="showNewUserPopup=true" class="gray-button">New</button>
+      </div>
+      <div main-title>
+        Results
+      </div>
+      <div main-content>
+        <table mat-table [dataSource]="courseData" *ngIf="usersTableReady" class="mat-elevation-z1">
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> # </th>
+           <!-- <td mat-cell *matCellDef="let element"> {{element.id}} </td>  -->
+           <td mat-cell *matCellDef="let element; let i = index">{{i + 1}}</td>
+          </ng-container>
+        
+          <ng-container matColumnDef="course_code">
+            <th mat-header-cell *matHeaderCellDef> COURSE CODE </th>
+            <td mat-cell *matCellDef="let element"> {{element.course_code}}</td> 
+            
+          </ng-container>
+        
+          <ng-container matColumnDef="course_name">
+            <th mat-header-cell *matHeaderCellDef> NAME</th>
+            <td mat-cell *matCellDef="let element"> {{element.course_name}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="active">
+            <th mat-header-cell *matHeaderCellDef> ACTIVE </th>
+            <td mat-cell *matCellDef="let element"> {{element.is_active}} </td>
+          </ng-container>
+        
+          <tr mat-header-row *matHeaderRowDef="coursesRowDef"></tr>
+          <tr mat-row *matRowDef="let row; columns: coursesRowDef" (click)="rowClicked(row)" [matMenuTriggerFor]="menu"></tr>
+          
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="showEditUserPopup=true">Edit</button>
+            <button mat-menu-item (click)="deleteUserProcess()">Delete</button>
+          </mat-menu>
+        </table>
+        
+        
+      </div>
+    </app-tab-template>
+  </mat-tab>
+
+  
 
   <!-- ======================================================================== -->
   
-    <mat-tab label="Courses">
-      <app-tab-template>
-        <div side-title>
-          Courses
-        </div>
-        <div side-content>
-          &lt;to be filled&gt;
-        </div>
-        <div main-title>
-          Results
-        </div>
-        <div main-content>
-          &lt;to be filled&gt;
-        </div>
-      </app-tab-template>
-    </mat-tab>
+  <mat-tab label="Subjects" value="Subjects">
+    <app-tab-template>
+      <div side-title>
+        Subjects
+      </div>
+      <div side-content>
+        <div>&lt;search bar?&gt;</div>
+        <button mat-button (click)="showNewUserPopup=true" class="gray-button">New</button>
+      </div>
+      <div main-title>
+        Results
+      </div>
+      <div main-content>
+        <table mat-table [dataSource]="subjectsData" *ngIf="usersTableReady" class="mat-elevation-z1">
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> # </th>
+           <!-- <td mat-cell *matCellDef="let element"> {{element.id}} </td>  -->
+           <td mat-cell *matCellDef="let element; let i = index">{{i + 1}}</td>
+          </ng-container>
+        
+          <ng-container matColumnDef="subject_code">
+            <th mat-header-cell *matHeaderCellDef> SUBJECT CODE </th>
+            <td mat-cell *matCellDef="let element"> {{element.subject_code}}</td> 
+            
+          </ng-container>
+        
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef> DESCRIPTION </th>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+          </ng-container>
 
-  <!-- ======================================================================== -->
+          <ng-container matColumnDef="active">
+            <th mat-header-cell *matHeaderCellDef> ACTIVE </th>
+            <td mat-cell *matCellDef="let element"> {{element.is_active}} </td>
+          </ng-container>
+        
+          <tr mat-header-row *matHeaderRowDef="subjectsRowDef"></tr>
+          <tr mat-row *matRowDef="let row; columns: subjectsRowDef" (click)="rowClicked(row)" [matMenuTriggerFor]="menu"></tr>
+          
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="showEditUserPopup=true">Edit</button>
+            <button mat-menu-item (click)="deleteUserProcess()">Delete</button>
+          </mat-menu>
+        </table>
+        
+        
+      </div>
+    </app-tab-template>
+  </mat-tab>
+
   
-    <mat-tab label="Subjects">
-      <app-tab-template>
-        <div side-title>
-          Subjects
-        </div>
-        <div side-content>
-          &lt;to be filled&gt;
-        </div>
-        <div main-title>
-          Results
-        </div>
-        <div main-content>
-          &lt;to be filled&gt;
-        </div>
-      </app-tab-template>
-    </mat-tab>
 
   <!-- ======================================================================== -->
   
@@ -96,7 +201,7 @@
     </mat-tab>
 
   <!-- ======================================================================== -->
-  W
+  
       <mat-tab label="Employees" value="Employees">
         <app-tab-template>
           <div side-title>
@@ -118,25 +223,25 @@
               </ng-container>
             
               <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <th mat-header-cell *matHeaderCellDef> NAME </th>
                 <td mat-cell *matCellDef="let element"> {{(element.last_name + "," + " " + element.first_name)}}</td> 
                 
               </ng-container>
             
               <ng-container matColumnDef="username">
-                <th mat-header-cell *matHeaderCellDef> Username </th>
+                <th mat-header-cell *matHeaderCellDef> USERNAME </th>
                 <td mat-cell *matCellDef="let element"> {{element.username}} </td>
               </ng-container>
 
               <ng-container matColumnDef="role">
-                <th mat-header-cell *matHeaderCellDef> Role </th>
+                <th mat-header-cell *matHeaderCellDef> ROLE </th>
                <!-- <td mat-cell *matCellDef="let element"> {{element.is_active}} </td> -->
                <td mat-cell *matCellDef="let element">ADMIN</td>
               </ng-container>
             
 
               <ng-container matColumnDef="active">
-                <th mat-header-cell *matHeaderCellDef> Active </th>
+                <th mat-header-cell *matHeaderCellDef> ACTIVE </th>
                <!-- <td mat-cell *matCellDef="let element"> {{element.is_active}} </td> -->
                <td mat-cell *matCellDef="let element"></td>
               </ng-container>
@@ -176,18 +281,18 @@
             </ng-container>
           
             <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <th mat-header-cell *matHeaderCellDef> NAME </th>
               <td mat-cell *matCellDef="let element"> {{instructorNameUtil(element.id)}}</td> 
               
             </ng-container>
           
             <ng-container matColumnDef="username">
-              <th mat-header-cell *matHeaderCellDef> Username </th>
+              <th mat-header-cell *matHeaderCellDef> USERNAME </th>
               <td mat-cell *matCellDef="let element"> {{element.username}} </td>
             </ng-container>
 
             <ng-container matColumnDef="active">
-              <th mat-header-cell *matHeaderCellDef> Active </th>
+              <th mat-header-cell *matHeaderCellDef> ACTIVE </th>
               <td mat-cell *matCellDef="let element"> {{element.is_active}} </td>
             </ng-container>
           
