--- a/src/app/manage-entities/manage-entities.component.html
+++ b/src/app/manage-entities/manage-entities.component.html
@@ -2,23 +2,69 @@
   
   <!-- ======================================================================== -->
 
-    <mat-tab label="Semesters">
-      <app-tab-template>
-        <div side-title>
-          Semesters
-        </div>
-        <div side-content>
-          &lt;to be filled&gt;
-        </div>
-        <div main-title>
-          Results
-        </div>
-        <div main-content>
-          &lt;to be filled&gt;
-        </div>
-      </app-tab-template>
-    </mat-tab>
+  <mat-tab label="Semesters" value="Semesters">
+    <app-tab-template>
+      <div side-title>
+        Semesters
+      </div>
+      <div side-content>
+        <div>&lt;search bar?&gt;</div>
+        <button mat-button (click)="showNewUserPopup=true" class="gray-button">New</button>
+      </div>
+      <div main-title>
+        Results
+      </div>
+      <div main-content>
+        <table mat-table [dataSource]="semesterData" *ngIf="usersTableReady" class="mat-elevation-z1">
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> # </th>
+           <!-- <td mat-cell *matCellDef="let element"> {{element.id}} </td>  -->
+           <td mat-cell *matCellDef="let element; let i = index">{{i + 1}}</td>
+          </ng-container>
+        
+          <ng-container matColumnDef="school_year">
+            <th mat-header-cell *matHeaderCellDef> SCH0OL YEAR </th>
+            <td mat-cell *matCellDef="let element"> {{element.school_year}}</td> 
+            
+          </ng-container>
+        
+          <ng-container matColumnDef="semester">
+            <th mat-header-cell *matHeaderCellDef> SEMESTER </th>
+            <td mat-cell *matCellDef="let element"> {{element.semester}} </td>
+          </ng-container>
 
+          <ng-container matColumnDef="campus_director">
+            <th mat-header-cell *matHeaderCellDef> CAMPUS DIRECTOR </th>
+            <td mat-cell *matCellDef="let element"> {{element.campus_director}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="active">
+            <th mat-header-cell *matHeaderCellDef> ACTIVE </th>
+            <td mat-cell *matCellDef="let element"> {{element.is_active}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="default">
+            <th mat-header-cell *matHeaderCellDef> DEFAULT </th>
+            <td mat-cell *matCellDef="let element">
+              <div *ngIf = "element.default === 1">Default</div>
+            </td>
+          </ng-container>
+        
+          <tr mat-header-row *matHeaderRowDef="semesterRowDef"></tr>
+          <tr mat-row *matRowDef="let row; columns: semesterRowDef" (click)="rowClicked(row)" [matMenuTriggerFor]="menu"></tr>
+          
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="showEditUserPopup=true">Edit</button>
+            <button mat-menu-item (click)="deleteUserProcess()">Delete</button>
+          </mat-menu>
+        </table>
+        
+        
+      </div>
+    </app-tab-template>
+  </mat-tab>
+
+  
   <!-- ======================================================================== -->
   
   <mat-tab label="Colleges" value="Colleges">
@@ -183,23 +229,62 @@
 
   <!-- ======================================================================== -->
   
-    <mat-tab label="Rooms">
-      <app-tab-template>
-        <div side-title>
-          Rooms
-        </div>
-        <div side-content>
-          &lt;to be filled&gt;
-        </div>
-        <div main-title>
-          Results
-        </div>
-        <div main-content>
-          &lt;to be filled&gt;
-        </div>
-      </app-tab-template>
-    </mat-tab>
+  <mat-tab label="Rooms" value="Rooms">
+    <app-tab-template>
+      <div side-title>
+        Rooms
+      </div>
+      <div side-content>
+        <div>&lt;search bar?&gt;</div>
+        <button mat-button (click)="showNewUserPopup=true" class="gray-button">New</button>
+      </div>
+      <div main-title>
+        Results
+      </div>
+      <div main-content>
+        <table mat-table [dataSource]="roomsData" *ngIf="usersTableReady" class="mat-elevation-z1">
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> # </th>
+           <!-- <td mat-cell *matCellDef="let element"> {{element.id}} </td>  -->
+           <td mat-cell *matCellDef="let element; let i = index">{{i + 1}}</td>
+          </ng-container>
+        
+          <ng-container matColumnDef="room_code">
+            <th mat-header-cell *matHeaderCellDef> ROOM CODE </th>
+            <td mat-cell *matCellDef="let element"> {{element.room_code}}</td> 
+            
+          </ng-container>
+        
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef> DESCRIPTION </th>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+          </ng-container>
 
+          <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef> TYPE </th>
+            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="active">
+            <th mat-header-cell *matHeaderCellDef> ACTIVE </th>
+            <td mat-cell *matCellDef="let element"> {{element.is_active}} </td>
+          </ng-container>
+        
+          <tr mat-header-row *matHeaderRowDef="roomsRowDef"></tr>
+          <tr mat-row *matRowDef="let row; columns: roomsRowDef" (click)="rowClicked(row)" [matMenuTriggerFor]="menu"></tr>
+          
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="showEditUserPopup=true">Edit</button>
+            <button mat-menu-item (click)="deleteUserProcess()">Delete</button>
+          </mat-menu>
+        </table>
+        
+        
+      </div>
+    </app-tab-template>
+  </mat-tab>
+
+  
   <!-- ======================================================================== -->
   
       <mat-tab label="Employees" value="Employees">
